--- a/简书/python学习/037 pyqt5学习.md
+++ b/简书/python学习/037 pyqt5学习.md
@@ -722,3 +722,791 @@ self.grid_layout.addWidget(self.pwd_line, 1, 1)
 * 4. 请记住QGridLayout的addWidget()语法形式：
 
 `addWidget(widget, row, column, rowSpan, columnSpan)`
+
+
+
+
+
+# 第四章 QMessageBox消息框
+在程序中加入各种消息框来提示可以提高用户体验度。
+
+ 
+
+## 4.1 各种类型的消息框
+```python
+import sys
+from PyQt5.QtWidgets import QApplication, QWidget, QPushButton, QMessageBox
+ 
+ 
+class Demo(QWidget):
+    def __init__(self):
+        super(Demo, self).__init__()
+        self.button = QPushButton('information', self)
+        self.button.clicked.connect(self.show_messagebox)      # 1
+ 
+    def show_messagebox(self):
+        QMessageBox.information(self, 'Title', 'Content', 
+                                QMessageBox.Yes | QMessageBox.No | QMessageBox.Cancel)  # 2
+ 
+ 
+if __name__ == '__main__':
+    app = QApplication(sys.argv)
+    demo = Demo()
+    demo.show()
+    sys.exit(app.exec_())
+```
+* 1. 实例化一个QPushButton并将clicked信号与自定义的show_messagebox槽函数连接起来，这样点击按钮后，信号发出，槽函数就会启动；
+
+* 2. 在槽函数中我们创建了一个信息框(information)，基本用法如下：
+
+* `QMessageBox.information(QWidget, ‘Title’, ’Content‘, buttons)`
+第一个参数填self，表示该信息框属于我们这里的Demo窗口；第二个参数类型为字符串，填入的是该信息框的标题；第三个参数类型也是字符串，填入的是信息框的提示内容；最后个参数为信息框上要添加的按钮，在示例代码中我们添加了Yes、No和Cancel三个按钮，多个按钮之间用 `| `来连接，常见的按钮种类有以下几种：
+```python
+QMessageBox.Ok   
+ 
+QMessageBox.Yes
+ 
+QMessageBox.No
+ 
+QMessageBox.Close
+ 
+QMessageBox.Cancel
+ 
+QMessage.Open
+ 
+QMessage.Save
+ 
+```
+最后运行截图如下：
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-b7242c2010af4556.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+点击后显示提示框：
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-845cbf3aec7cf0a6.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+> 注：我是在Mac电脑上运行的，所以这里信息框的标题并没有显示出来。
+
+ 
+
+如果你没有显示指定信息框的按钮，那信息框会自己默认加上合适的按钮上去：
+
+QMessageBox.information(self, 'Title', 'Content')
+运行截图如下：
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-0979e5f8a8589a90.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+
+ 
+
+除了信息框(information)，还有以下几种，用法都是类似的(请注意消息框上的图标变化)：
+
+QMessageBox.question            问答框
+
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-e5bce40c3ba32897.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+QMessageBox.warning             警告框
+
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-ba18ab1825f4cdcf.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+QMessageBox.critical               错误框
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-2de571155526f21b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+
+QMessageBox.about                关于框
+
+
+ ![image.png](https://upload-images.jianshu.io/upload_images/14555448-4382543cec527bce.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+## 4.2 与消息框交互
+在上面的示例中，不管用户按了哪个按钮，程序都用关闭消息框来作出反应。然而用户会希望点击不同按钮，程序作出的反应不同。下面举一个简单的示例：
+```python
+import sys
+from PyQt5.QtWidgets import QApplication, QWidget, QPushButton, QMessageBox
+ 
+ 
+class Demo(QWidget):
+    def __init__(self):
+        super(Demo, self).__init__()
+        self.button = QPushButton('Click Me!', self)
+        self.button.clicked.connect(self.show_messagebox)
+ 
+    def show_messagebox(self):
+        choice = QMessageBox.question(self, 'Change Text?', 'Would you like to change the button text?',  
+                             QMessageBox.Yes | QMessageBox.No)  # 1
+ 
+        if choice == QMessageBox.Yes:                           # 2
+            self.button.setText('Changed!')
+        elif choice == QMessageBox.No:                          # 4
+            pass
+ 
+ 
+if __name__ == '__main__':
+    app = QApplication(sys.argv)
+    demo = Demo()
+    demo.show()
+    sys.exit(app.exec_())
+```
+* 1. 当点击消息框上的某个按钮之后，会返回这个按钮，而这里将返回的按钮结果保存在choice中；有返回值
+
+* 2. 若是按下了Yes，则改变按钮的文字；
+
+* 3. 若是按下了No，则什么都不做。
+
+ 
+
+运行截图如下：
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-67964808650010a8.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+点击Yes之后，按钮文本改变：
+
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-253d8f95aa363fba.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+ 
+
+## 4.3 小结
+* 1. 消息框的种类有：
+information 信息框；question 问答框； warning 警告框； critical 错误框； about 关于框( 其实还有一个aboutQt框，是专门用来展示Qt软件信息的，这里不再讲述)。
+
+* 2. 语法形式(buttons可以不用指定)：
+QMessageBox.information(QWidget, ‘Title’, ’Content‘, buttons)
+* 3. 在与消息框交互的时候，可以用一个变量来保存消息框返回的按钮信息，接下来再用判断语句来作出不同的反应。
+
+## 第五章 完善登录框小程序
+在这一章中，我们会结合前面所学的知识来完善登录框小程序。
+
+为保证代码敲击畅通，可以先引入该程序用到的模块和控件：
+```python
+import sys
+from PyQt5.QtWidgets import QApplication, QWidget, QDialog, QLabel, QLineEdit, QPushButton, \
+    QGridLayout, QVBoxLayout, QHBoxLayout, QMessageBox
+```
+## 5.1 登录界面布局
+首先完成登录界面布局，请看下方代码：
+```python
+import sys
+from PyQt5.QtWidgets import QApplication, QWidget, QDialog, QLabel, QLineEdit, QPushButton, \
+    QGridLayout, QVBoxLayout, QHBoxLayout, QMessageBox
+
+class Demo(QWidget):
+    def __init__(self):
+        super(Demo, self).__init__()
+        self.resize(300, 100)  #设置窗口的大小为300*100
+ 
+        self.user_label = QLabel('Username:', self)
+        self.pwd_label = QLabel('Password:', self)
+        self.user_line = QLineEdit(self)
+        self.pwd_line = QLineEdit(self)
+        self.login_button = QPushButton('Log in', self)
+        self.signin_button = QPushButton('Sign in', self)
+ 
+        self.grid_layout = QGridLayout()
+        self.h_layout = QHBoxLayout()
+        self.v_layout = QVBoxLayout()
+ 
+        self.layout_init()
+ 
+    def layout_init(self):
+        self.grid_layout.addWidget(self.user_label, 0, 0, 1, 1)
+        self.grid_layout.addWidget(self.user_line, 0, 1, 1, 1)
+        self.grid_layout.addWidget(self.pwd_label, 1, 0, 1, 1)
+        self.grid_layout.addWidget(self.pwd_line, 1, 1, 1, 1)
+        self.h_layout.addWidget(self.login_button)
+        self.h_layout.addWidget(self.signin_button)
+        self.v_layout.addLayout(self.grid_layout)
+        self.v_layout.addLayout(self.h_layout)
+ 
+        self.setLayout(self.v_layout)
+ 
+ 
+if __name__ == '__main__':
+    app = QApplication(sys.argv)
+    demo = Demo()
+    demo.show()
+    sys.exit(app.exec_())
+```
+> 程序首先将窗口的宽设为300，长设为100。接着再实例化了几个控件：两个文本标签、两个单行文本输入框和两个按钮。然后搭配使用网格布局管理器、水平布局管理器和垂直布局管理器来完成整个界面的布局。相信看过前面章节的小伙伴已经可以理解上方代码的意思了，这里就不再详细解释。
+
+ 
+
+>这里有一点需要注意一下，我把布局管理专门放在了一个函数中layout_init()，然后只用在初始化函数中加上layout_init()中就行。把对不同控件的操作分开来放在相应的函数中，这样写不仅可以让代码更加清晰明了，也方便日后维护。
+
+ 
+
+此时程序运行截图如下：
+
+
+
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-9f758e04041530b7.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+## 5.2 完善单行文本输入框和按钮功能
+该步骤要完成的结果截图如下：
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-1763987eafb218a8.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+> 单行文本输入框中有浅灰色的提示文字，Log in按钮刚开始无法点击，只能等两个输入框中都有文本输入的时候才可以进行点击。
+
+ 
+
+首先对输入框功能进行完善。
+```python
+def lineedit_init(self):
+    self.user_line.setPlaceholderText('Please enter your username')
+    self.pwd_line.setPlaceholderText('Please enter your password')
+ 
+    self.user_line.textChanged.connect(self.check_input_func)
+    self.pwd_line.textChanged.connect(self.check_input_func)
+```
+> 在未输入前，我们有会看到输入框上就已经有了一行浅灰色的提示文字，就像下面这种：
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-e544cdb3da23ec42.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+但点击的话浅灰色的文字就会不见：
+
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-91e0ec77c8ec2cf4.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+这种功能就是通过`setPlaceholderText()`方法来实现的。在这里还进行了信号和槽的连接，将`QLineEdit`的`textChanged()`信号连接到一个自定义的槽`self.check_input_func`上。`textChanged()`信号会在输入框中文本发生变化的时候发出, 所以槽函数的任务就是判断两个输入框是否都有文字了：
+```python
+def check_input_func(self):
+    if self.user_line.text() and self.pwd_line.text():
+        self.login_button.setEnabled(True)
+    else:
+        self.login_button.setEnabled(False)
+```
+> 如果账号框和密码框都有文本(通过text()方法获取输入框文本)，那就使登录按钮可用(setEnabled(True))，否则登录按钮不可用。
+
+ 
+
+接下来对按钮进行完善：
+```python
+def pushbutton_init(self):
+    self.login_button.setEnabled(False)
+```
+使刚开始显示的登录按钮不可用，只有等账号框和密码框都有文本的时候才能用(上面的槽函数)。
+
+当我们点击登录按钮的时候，账号框和密码框都有文本了，那点击后肯定是要验证账号密码是否正确：
+```python
+def pushbutton_init(self):
+    self.login_button.setEnabled(False)   #按下按钮后,不能再次按下
+    self.login_button.clicked.connect(self.check_login_func)  #同时检查账号密码是否正确
+```
+所以我们将登录按钮的clicked信号和一个用于检查账号密码是否正确的自定义槽函数连接起来：
+
+首先我们在程序的最开始处定义一个全局变量`USER_PWD`：
+```python
+import sys
+from PyQt5.QtWidgets import QApplication, QWidget, QDialog, QLabel, QLineEdit, QPushButton, \
+    QGridLayout, QVBoxLayout, QHBoxLayout, QMessageBox
+ 
+USER_PWD = {
+        'la_vie': 'password'
+    }  #定义账号密码的全局变量
+```
+该字典的键'la_vie'就是当作账号，值‘password’就当作密码(之后复杂的程序会使用数据库，这里就先简单定义一个全局变量来使用)。
+
+然后定义检查账号密码的槽函数：
+```python
+def check_login_func(self):
+    if USER_PWD.get(self.user_line.text()) == self.pwd_line.text():
+        QMessageBox.information(self, 'Information', 'Log in Successfully!')
+    else:
+        QMessageBox.critical(self, 'Wrong', 'Wrong Username or Password!')
+ 
+    self.user_line.clear()
+    self.pwd_line.clear()
+```
+> 将账号框的文本当作get()的参数来获取值，然后跟密码框的文本进行比较，若相同则显示信息框提示登录成功，否则显示账号或密码错误。最后无论成功还是失败，都会用clear()方法来清空账号框和密码框。
+
+最后将`self.lineedit_init()`和`self.pushbutton_init()`放在类的初始化函数__init__()中：
+```python
+class Demo(QWidget):
+    def __init__(self):
+        super(Demo, self).__init__()
+        self.resize(300, 100)
+ 
+        self.user_label = QLabel('Username:', self)
+        self.pwd_label = QLabel('Password:', self)
+        self.user_line = QLineEdit(self)
+        self.pwd_line = QLineEdit(self)
+        self.login_button = QPushButton('Log in', self)
+        self.signin_button = QPushButton('Sign in', self)
+ 
+        self.grid_layout = QGridLayout()
+        self.h_layout = QHBoxLayout()
+        self.v_layout = QVBoxLayout()
+ 
+        self.lineedit_init()            # 单行文本输入框
+        self.pushbutton_init()          # 按钮,直接将定义的按钮放在类中进行初始化
+        self.layout_init()
+```
+
+此时程序运行截图如下：
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-3e49f51c937fcdba.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+输入la_vie和password，点击Log in按钮，则显示信息框提示登录成功。
+
+输入一个错误的账号或错误的密码，就会显示错误框提示账号或密码错误：
+
+
+
+点击OK后，账号框和密码框文本都被清空，恢复原状：
+
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-53ac857d3ca61be0.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+ 
+
+## 5.3 完善注册界面布局及功能
+接下来就是要完善Sign in按钮这个功能，这里我们想的是点击这个按钮后，会出现一个新的界面用于注册，即下方截图所示：
+
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-7dc1a5624ba3d494.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+可以看出该界面一共是由三个QLabel、三个QLineEdit和一个QPushButton组成的，那首先就来完成界面布局：
+```python
+class SigninPage(QDialog):
+    def __init__(self):
+        super(SigninPage, self).__init__()
+        self.signin_user_label = QLabel('Username:', self)
+        self.signin_pwd_label = QLabel('Password:', self)
+        self.signin_pwd2_label = QLabel('Password:', self)
+        self.signin_user_line = QLineEdit(self)
+        self.signin_pwd_line = QLineEdit(self)
+        self.signin_pwd2_line = QLineEdit(self)
+        self.signin_button = QPushButton('Sign in', self)
+ 
+        self.user_h_layout = QHBoxLayout()
+        self.pwd_h_layout = QHBoxLayout()
+        self.pwd2_h_layout = QHBoxLayout()
+        self.all_v_layout = QVBoxLayout()
+ 
+        self.layout_init()
+ 
+    def layout_init(self):
+        self.user_h_layout.addWidget(self.signin_user_label)
+        self.user_h_layout.addWidget(self.signin_user_line)
+        self.pwd_h_layout.addWidget(self.signin_pwd_label)
+        self.pwd_h_layout.addWidget(self.signin_pwd_line)
+        self.pwd2_h_layout.addWidget(self.signin_pwd2_label)
+        self.pwd2_h_layout.addWidget(self.signin_pwd2_line)
+ 
+        self.all_v_layout.addLayout(self.user_h_layout)
+        self.all_v_layout.addLayout(self.pwd_h_layout)
+        self.all_v_layout.addLayout(self.pwd2_h_layout)
+        self.all_v_layout.addWidget(self.signin_button)
+ 
+        self.setLayout(self.all_v_layout)
+```
+这里我们新写一个类，并继承于QDialog(另一个毛坯房)。QDialog就是指对话框，我们平时在软件中点击“打开”或“另存为”而出现的文件对话框就是其中一种。当然你这里也可以同样继承于QWidget，但是QDialog中有一个方法是QWidget所不具有的，稍后来讲述。
+
+上面的代码不再详细解释，相信大家可以看懂了。
+
+ 
+
+首先同样将`Sign in`按钮设为不可用(`setEnabled(False)`)，并且只有当三个输入框中都有文本的时候，才会启用这个按钮。原理跟之前讲的一样：
+```python
+def lineedit_init(self):
+    self.signin_user_line.textChanged.connect(self.check_input_func)
+    self.signin_pwd_line.textChanged.connect(self.check_input_func)
+    self.signin_pwd2_line.textChanged.connect(self.check_input_func)
+```
+在lineedit_init()中我们将三个输入框的textChanged()信号跟自定义的
+`check_input_func()`槽函数进行连接；
+```python
+def check_input_func(self):
+    if self.signin_user_line.text() and self.signin_pwd_line.text() and self.signin_pwd2_line.text():
+        self.signin_button.setEnabled(True)
+    else:
+        self.signin_button.setEnabled(False)
+```
+在槽函数中我们判断三个输入框是否都有文本，有的话则将按钮启用，否则禁用；
+
+
+​     
+```python
+def pushbutton_init(self):   #初始化
+    self.signin_button.setEnabled(False)
+    self.signin_button.clicked.connect(self.check_signin_func)
+```
+然后在pushbutton_init()中先将sign in按钮设为禁用状态，然后将clicked()信号和之后自定义的check_signin_func()槽函数连接起来。因为在点击注册按钮的时候我们要对输入的文本内容进行检查，看符不符合要求；
+
+```python
+def check_signin_func(self):
+    if self.signin_pwd_line.text() != self.signin_pwd2_line.text():
+        QMessageBox.critical(self, 'Wrong', 'Two Passwords Typed Are Not Same!')
+    elif self.signin_user_line.text() not in USER_PWD:
+        USER_PWD[self.signin_user_line.text()] = self.signin_pwd_line.text()
+        QMessageBox.information(self, 'Information', 'Register Successfully')
+        self.close()
+    else:
+        QMessageBox.critical(self, 'Wrong', 'This Username Has Been Registered!')
+ 
+    self.signin_user_line.clear()
+    self.signin_pwd_line.clear()
+    self.signin_pwd2_line.clear()
+```
+> 首先判断两次密码输入框输入的文本是否一致，若不相同的话，则显示错误框提示；当然我们还要对要注册的账号进行判断，如果在字典相对应的键，则说明该账号并没有被注册过，接着将要注册的账号和密码放进字典中，并显示信息框提示注册成功。self.close()是指关闭对话框自身，也就是在信息框按钮被按下去关闭之后，注册界面的对话框也要一起关闭。最后一种情况就是账号已经被注册过了，于是显示错误框来进行提示。
+
+无论哪种情况，最后都会将三个输入框的文本清空掉。
+
+那么最后将self.lineedit_init()和self.pushbutton_init()放在类的初始化函数__init__()中：
+```python
+class SigninPage(QDialog):
+    def __init__(self):
+        super(SigninPage, self).__init__()
+        self.signin_user_label = QLabel('Username:', self)
+        self.signin_pwd_label = QLabel('Password:', self)
+        self.signin_pwd2_label = QLabel('Password:', self)
+        self.signin_user_line = QLineEdit(self)
+        self.signin_pwd_line = QLineEdit(self)
+        self.signin_pwd2_line = QLineEdit(self)
+        self.signin_button = QPushButton('Sign in', self)
+ 
+        self.user_h_layout = QHBoxLayout()
+        self.pwd_h_layout = QHBoxLayout()
+        self.pwd2_h_layout = QHBoxLayout()
+        self.all_v_layout = QVBoxLayout()
+ 
+        self.lineedit_init()            # 单行文本输入框
+        self.pushbutton_init()          # 按钮
+        self.layout_init()
+```
+
+## 5.4 整合登录界面和注册界面
+但是此时运行程序点击登录界面上的sign in按钮的话，注册界面是显示不出来的，所以我们要将登录界面sign in按钮的clicked()信号和一个自定义的用来显示注册界面的槽函数连接起来：
+```python
+class Demo(QWidget):
+    def __init__(self):
+        super(Demo, self).__init__()
+        self.resize(300, 100)
+ 
+        self.user_label = QLabel('Username:', self)
+        self.pwd_label = QLabel('Password:', self)
+        self.user_line = QLineEdit(self)
+        self.pwd_line = QLineEdit(self)
+        self.login_button = QPushButton('Log in', self)
+        self.signin_button = QPushButton('Sign in', self)
+ 
+        self.grid_layout = QGridLayout()
+        self.h_layout = QHBoxLayout()
+        self.v_layout = QVBoxLayout()
+ 
+        self.lineedit_init()
+        self.pushbutton_init()
+        self.layout_init()
+        self.signin_page = SigninPage()     # 实例化SigninPage()
+```
+首先我们在Demo的初始化函数中先实例化了SigninPage；
+```python
+def pushbutton_init(self):
+    self.login_button.setEnabled(False)
+    self.login_button.clicked.connect(self.check_login_func)
+    self.signin_button.clicked.connect(self.show_signin_page_func)
+```
+接着在处理按钮的函数中将sign in按钮的clicked信号和show_signin_page_func()槽函数进行连接； 
+```python
+def show_signin_page_func(self):
+    self.signin_page.exec_()
+```
+在槽函数中，我们用exec_方法来执行注册界面。为什么要使用exec_而不是show()？下面来详细解释下这两个方法的区别：
+
+若使用exec_()的话，那么显示出来的注册界面就是模态的，意思就是当前智能对该注册界面进行操作，只有关闭了该界面才能对其他界面进行操作；若使用show()的话，那注册界面就是非模态的，则在显示了注册界面后，还能同时对登录界面进行操作(QDialog有ecec_()方法，而QWidget没有)。
+
+ 
+
+此时运行截图如下：
+
+点击登录界面的Sign in，显示注册界面，然后输入账号密码，若没有问题，则显示注册成功；
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-910074dc28125b82.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+
+若两次密码输入不一致，则显示错误框提示； 
+
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-2bad54b960b5b563.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+若用户名已经被注册过了，则显示错误框提示。 
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-45e0b0cbd4f75c26.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+
+ 
+
+这里为了方便演示，所以密码框输入的时候都没有用原点替代，我们可以对输入框使用setEchoMode(QLineEdit.Password)方法来完成此功能：
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-31923b90bb6f9464.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-a5d7a2212f2a3cac.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+
+ 
+
+最终完整的代码如下：
+```python
+import sys
+from PyQt5.QtWidgets import QApplication, QWidget, QDialog, QLabel, QLineEdit, QPushButton, \
+    QGridLayout, QVBoxLayout, QHBoxLayout, QMessageBox
+ 
+USER_PWD = {
+        'la_vie': 'password'
+    }
+ 
+ 
+class Demo(QWidget):
+    def __init__(self):
+        super(Demo, self).__init__()
+        self.resize(300, 100)
+ 
+        self.user_label = QLabel('Username:', self)
+        self.pwd_label = QLabel('Password:', self)
+        self.user_line = QLineEdit(self)
+        self.pwd_line = QLineEdit(self)
+        self.login_button = QPushButton('Log in', self)
+        self.signin_button = QPushButton('Sign in', self)
+ 
+        self.grid_layout = QGridLayout()
+        self.h_layout = QHBoxLayout()
+        self.v_layout = QVBoxLayout()
+ 
+        self.lineedit_init()
+        self.pushbutton_init()
+        self.layout_init()
+        self.signin_page = SigninPage()     # 实例化SigninPage()
+ 
+    def layout_init(self):
+        self.grid_layout.addWidget(self.user_label, 0, 0, 1, 1)
+        self.grid_layout.addWidget(self.user_line, 0, 1, 1, 1)
+        self.grid_layout.addWidget(self.pwd_label, 1, 0, 1, 1)
+        self.grid_layout.addWidget(self.pwd_line, 1, 1, 1, 1)
+        self.h_layout.addWidget(self.login_button)
+        self.h_layout.addWidget(self.signin_button)
+        self.v_layout.addLayout(self.grid_layout)
+        self.v_layout.addLayout(self.h_layout)
+ 
+        self.setLayout(self.v_layout)
+ 
+    def lineedit_init(self):
+        self.user_line.setPlaceholderText('Please enter your username')
+        self.pwd_line.setPlaceholderText('Please enter your password')
+        self.pwd_line.setEchoMode(QLineEdit.Password)
+ 
+        self.user_line.textChanged.connect(self.check_input_func)
+        self.pwd_line.textChanged.connect(self.check_input_func)
+ 
+    def pushbutton_init(self):
+        self.login_button.setEnabled(False)
+        self.login_button.clicked.connect(self.check_login_func)
+        self.signin_button.clicked.connect(self.show_signin_page_func)
+ 
+    def check_login_func(self):
+        if USER_PWD.get(self.user_line.text()) == self.pwd_line.text():
+            QMessageBox.information(self, 'Information', 'Log in Successfully!')
+        else:
+            QMessageBox.critical(self, 'Wrong', 'Wrong Username or Password!')
+ 
+        self.user_line.clear()
+        self.pwd_line.clear()
+ 
+    def show_signin_page_func(self):
+        self.signin_page.exec_()
+ 
+    def check_input_func(self):
+        if self.user_line.text() and self.pwd_line.text():
+            self.login_button.setEnabled(True)
+        else:
+            self.login_button.setEnabled(False)
+ 
+ 
+class SigninPage(QDialog):
+    def __init__(self):
+        super(SigninPage, self).__init__()
+        self.signin_user_label = QLabel('Username:', self)
+        self.signin_pwd_label = QLabel('Password:', self)
+        self.signin_pwd2_label = QLabel('Password:', self)
+        self.signin_user_line = QLineEdit(self)
+        self.signin_pwd_line = QLineEdit(self)
+        self.signin_pwd2_line = QLineEdit(self)
+        self.signin_button = QPushButton('Sign in', self)
+ 
+        self.user_h_layout = QHBoxLayout()
+        self.pwd_h_layout = QHBoxLayout()
+        self.pwd2_h_layout = QHBoxLayout()
+        self.all_v_layout = QVBoxLayout()
+ 
+        self.lineedit_init()
+        self.pushbutton_init()
+        self.layout_init()
+ 
+    def layout_init(self):
+        self.user_h_layout.addWidget(self.signin_user_label)
+        self.user_h_layout.addWidget(self.signin_user_line)
+        self.pwd_h_layout.addWidget(self.signin_pwd_label)
+        self.pwd_h_layout.addWidget(self.signin_pwd_line)
+        self.pwd2_h_layout.addWidget(self.signin_pwd2_label)
+        self.pwd2_h_layout.addWidget(self.signin_pwd2_line)
+ 
+        self.all_v_layout.addLayout(self.user_h_layout)
+        self.all_v_layout.addLayout(self.pwd_h_layout)
+        self.all_v_layout.addLayout(self.pwd2_h_layout)
+        self.all_v_layout.addWidget(self.signin_button)
+ 
+        self.setLayout(self.all_v_layout)
+ 
+    def lineedit_init(self):
+        self.signin_pwd_line.setEchoMode(QLineEdit.Password)
+        self.signin_pwd2_line.setEchoMode(QLineEdit.Password)
+ 
+        self.signin_user_line.textChanged.connect(self.check_input_func)
+        self.signin_pwd_line.textChanged.connect(self.check_input_func)
+        self.signin_pwd2_line.textChanged.connect(self.check_input_func)
+ 
+    def pushbutton_init(self):
+        self.signin_button.setEnabled(False)
+        self.signin_button.clicked.connect(self.check_signin_func)
+ 
+    def check_input_func(self):
+        if self.signin_user_line.text() and self.signin_pwd_line.text() and self.signin_pwd2_line.text():
+            self.signin_button.setEnabled(True)
+        else:
+            self.signin_button.setEnabled(False)
+ 
+    def check_signin_func(self):
+        if self.signin_pwd_line.text() != self.signin_pwd2_line.text():
+            QMessageBox.critical(self, 'Wrong', 'Two Passwords Typed Are Not Same!')
+        elif self.signin_user_line.text() not in USER_PWD:
+            USER_PWD[self.signin_user_line.text()] = self.signin_pwd_line.text()
+            QMessageBox.information(self, 'Information', 'Register Successfully')
+            self.close()
+        else:
+            QMessageBox.critical(self, 'Wrong', 'This Username Has Been Registered!')
+ 
+        self.signin_user_line.clear()
+        self.signin_pwd_line.clear()
+        self.signin_pwd2_line.clear()
+ 
+ 
+if __name__ == '__main__':
+    app = QApplication(sys.argv)
+    demo = Demo()
+    demo.show()
+    sys.exit(app.exec_())
+```
+
+## 5.5 小结
+* 1. setPlaceholderText()方法用于在输入框显示浅灰色的提示文本；
+
+* 2. ecec_()方法可以让窗口成为模态窗口，而调用show()方法，窗口是非模态的。模态窗口将程序控制权占据，只有对当前窗口关闭后才能操作其他窗口；
+
+* 3. QDialog有exec_()方法，而QWidget没有；
+
+* 4. 可以用setEchoMode(QLineEdit.Password)将普通输入框中的文字变成原点。
+
+# 第六章 文本编辑框QTextEdit和文本浏览框QTextBrowser
+
+## 6.1 同步显示文本
+相信通过这两个控件的中文名大家应该也知道这两个控件的功能是什么了，前者用来编辑文本，后者无法编辑，只用于显示。我们将通过完成以下程序来讲解这两个控件的用法：
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-1df4d2696a1c2ca3.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+
+左边为QTextEdit控件，右边为QTextBrowser控件。在左边输入文字时，右边会同步显示。请看下方代码：
+```python
+# -*- coding: utf-8 -*-
+"""
+Spyder Editor
+
+This is a temporary script file.
+"""
+
+import sys
+from PyQt5.QtWidgets import QApplication, QWidget, QLabel, QTextEdit, QTextBrowser, QHBoxLayout, QVBoxLayout
+ 
+ 
+class Demo(QWidget):
+    def __init__(self):
+        super(Demo, self).__init__()
+        self.edit_label = QLabel('QTextEdit', self)   #实例化一个编辑label
+        self.browser_label = QLabel('QTextBrowser', self) #实例化一个现实label
+        self.text_edit = QTextEdit(self)  #实例化一个编辑文本框
+        self.text_browser = QTextBrowser(self)   #实例化一个显示文本框
+ 
+        self.edit_v_layout = QVBoxLayout()
+        self.browser_v_layout = QVBoxLayout()
+        self.all_h_layout = QHBoxLayout()
+ 
+        self.layout_init()   #布局初始化
+        self.text_edit_init()
+ 
+    def layout_init(self):  #布局函数
+        self.edit_v_layout.addWidget(self.edit_label)
+        self.edit_v_layout.addWidget(self.text_edit)
+ 
+        self.browser_v_layout.addWidget(self.browser_label)
+        self.browser_v_layout.addWidget(self.text_browser)
+ 
+        self.all_h_layout.addLayout(self.edit_v_layout)
+        self.all_h_layout.addLayout(self.browser_v_layout)
+ 
+        self.setLayout(self.all_h_layout)
+ 
+    def text_edit_init(self):
+        self.text_edit.textChanged.connect(self.show_text_func)  # 1如果text_edit中的文本发生改变的话调用下一个函数
+ 
+    def show_text_func(self):
+        self.text_browser.setText(self.text_edit.toPlainText())  # 2将文本设置为获取到的text_edit中的文本,注意额是使用的toPlainText来获取的文本
+ 
+ 
+if __name__ == '__main__':
+    app = QApplication(sys.argv)
+    demo = Demo()
+    demo.show()
+    sys.exit(app.exec_())
+```
+程序非常简单。通过实例化两个QLabel、一个QTextEdit以及一个QTextBrowser再通过垂直布局和水平布局就可以完成整个界面。关键点是在信号和槽的连接上。
+
+* 1. 将self.text_edit的textChanged信号连接到自定义的槽函数上。也就是说当self.text_edit中的文本发生改变的时候，就会发出textChanged信号，然后调用show_text_func()槽函数。
+
+* 2. 在槽函数中我们通过setText()方法将self.text_browser的文本设为self.text_edit的文本，而self.text_edit的文本通过toPlainText()获取，而不是text().
+
+ 
+
+有趣的是，当我们在编辑框中输入Html代码时，右边的浏览框会对其执行：
+
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-7a7b9b722a1845e8.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
+
+
+这里只是简单的介绍这两个控件的使用，不过其实也已经很够用了。等之后用到这两个控件的其他方法时，会再详细介绍。
+
+ 
+
+## 6.2 小结
+* 1. 顾名思义，`QTextEdit`为用来编辑文本，而`QTextBrowser`用来显示文本；
+
+* 2. `setText()`用来设置文本，`toPlainText()`用来获取文本，这两个控件都有这些方法；
+
+* 3. 浏览框会执行Html代码。
