--- a/简书/语音识别/语音识别声学模型.md
+++ b/简书/语音识别/语音识别声学模型.md
@@ -738,3 +738,24 @@ def data_generator(batch_size, shuffle_list, wav_lst, label_data, vocab):
 
 ```
 
+## 3. 模型搭建
+
+训练输入为时频图，标签为对应的拼音标签，如下所示：
+
+搭建语音识别模型，采用了 CNN+CTC 的结构。
+
+![image.png](https://upload-images.jianshu.io/upload_images/14555448-c9cda78b85b95164.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+```python
+import keras
+from keras.layers import Input, Conv2D, BatchNormalization, MaxPooling2D  #输入,2维卷积,数据的标准化?(再查查),最大池化算法
+from keras.layers import Reshape, Dense, Lambda 
+from keras.optimizers import Adam  #Adam迭代器
+from keras import backend as K  #导入底层框架
+from keras.models import Model  #训练模型 
+from keras.utils import multi_gpu_model  #多GPU使用
+
+```
+
+
+
