力扣刷题,java学习

--- a/简书/力扣刷题/002-力扣刷题2-两数相加.md
+++ b/简书/力扣刷题/002-力扣刷题2-两数相加.md
@@ -47,3 +47,49 @@ class Solution(object):
         return root
         
 ```
+上面的方式其实是一个取巧的操作
+下面才是真正长链表操作的一个正确的解决方式
+```python
+# Definition for singly-linked list.
+# class ListNode(object):
+#     def __init__(self, x):
+#         self.val = x
+#         self.next = None
+
+class Solution(object):
+    def addTwoNumbers(self, l1, l2):
+        """
+        :type l1: ListNode
+        :type l2: ListNode
+        :rtype: ListNode
+        """
+        if l1 == None:
+            return l2
+        if l2 == None:
+            return l1
+        carry = 0  #进位的大小
+        dummy=ListNode(0) #创建一个新的链表  #dummy是根节点
+        p=dummy #指针
+        
+        while l1 and l2:
+            p.next =ListNode((l1.val+l2.val+carry)%10) #存储当前两个节点的值相加后进位剩下的数值
+            carry=(l1.val+l2.val+carry)//10 #更新carry进位的大小
+            l1=l1.next
+            l2=l2.next
+            p=p.next  #指针向下移动
+        if l2:  #如果l2比较长的话
+            while l2:
+                p.next=ListNode((l2.val+carry)%10)
+                carry=(l2.val+carry)//10
+                l2=l2.next
+                p=p.next
+        if l1:  #如果l1比较长的话
+            while l1:
+                p.next=ListNode((l1.val+carry)%10)
+                carry=(l1.val+carry)//10
+                l1=l1.next
+                p=p.next
+        if carry == 1: #最终carry依旧有进位的话
+            p.next=ListNode(1) #最高位溢出
+        return dummy.next  #返回next的原因是跟节点是我们不需要的
+```
