--- a/简书/java学习/002-day02,常量,进制转换,数据类型转换,算数运算符,赋值运算符,关系运算符.md
+++ b/简书/java学习/002-day02,常量,进制转换,数据类型转换,算数运算符,赋值运算符,关系运算符.md
@@ -15,7 +15,13 @@
 - D:案例演示
   - 用输出语句输出各种常量。null不演示
  ```java
-class Demo1_Constant {						//constant 常量
+package zang;
+
+public class chang_liang_shu_chu {
+
+	/**
+	 * @param args
+	 */
 	public static void main(String[] args) {
 		/*
 		* 字符串常量	用双引号括起来的内容
@@ -25,17 +31,29 @@ class Demo1_Constant {						//constant 常量
 		* 布尔常量		较为特殊，只有true和false
 		* 空常量		    null(数组部分讲解)
 		*/
-		System.out.println("abc");		//字符串常量
-		System.out.println(123);		//整数常量
-		System.out.println(12.3);		//小数常量
-		//System.out.println('10');		//''中必须放的是单个字符,10代表的是1字符和0字符
-		//System.out.println('');		//''中什么也不放,也是不可以的,因为代表不了任何字符
-		System.out.println(' ');		//带表空格字符
-		System.out.println(true);		//boolean类只有两个值,true和false
+		System.out.println("abc");	//字符串常量
+		System.out.println(123);	//整数常量
+		System.out.println(123.12);	//小数常量
+		//System.out.println('10');	//''中必须放的是单个字符,10代表的是1字符和0字符
+		//System.out.println('');	//''中什么也不放,也是不可以的,因为代表不了任何字符
+		System.out.println(' ');    //代表空格字符
+		System.out.println(true);	//boolean类只有两个值,true和false
 		System.out.println(false);
+
 	}
+
 }
 
+
+ ```
+
+执行结果:
+```java
+abc                                                                                      
+123                                                                                       
+12.3                                                                                                                                                                         true                                                                                     
+false                                                                                     
+请按任意键继续. . .  
 ```
 
 ### 02.02_Java语言基础(进制概述和二,八,十六进制图解)(了解)
@@ -73,7 +91,13 @@ class Demo1_Constant {						//constant 常量
   - 100
   - 0x100
 ```java
-class Demo1_Scale {								//scale 进制
+package zang;
+
+public class jinzhi {
+
+	/**
+	 * @param args
+	 */
 	public static void main(String[] args) {
 		/*
 		* 0b100
@@ -85,18 +109,25 @@ class Demo1_Scale {								//scale 进制
 		System.out.println(0100);				//64?	八进制表示形式前面加0
 		System.out.println(100);
 		System.out.println(0x100);				//256?	十六进制表示形式前面加0x(可以大写也可以小写)
+
 	}
+
 }
 
+
 ```
+
 执行结果:
-```java
-abc                                                                                      
-123                                                                                       
-12.3                                                                                                                                                                                true                                                                                     
-false                                                                                     
-请按任意键继续. . .  
+
+```python
+4
+64
+100
+256
 ```
+
+
+
 ### 02.04_Java语言基础(任意进制到十进制的转换图解)(了解)
 
 - A:任意进制到十进制的转换原理
@@ -108,6 +139,8 @@ false
   - 二进制--十进制
   - 八进制--十进制
   - 十六进制--十进制
+  
+  
 
 ### 02.05_Java语言基础(十进制到任意进制的转换图解)(了解)
 
@@ -134,8 +167,8 @@ false
   - 原码
     - 就是二进制定点表示法，即最高位为符号位，“0”表示正，“1”表示负，其余位表示数值的大小。
     - 通过一个字节,也就是8个二进制位表示+7和-7
-    - 0(符号位)	0000111
-    - 1(符号位)	0000111
+    - 0(符号位)	0000111 (+7)
+    - 1(符号位)	1000111 (-7)
   - 反码
     - 正数的反码与其原码相同；负数的反码是对其原码逐位取反，但符号位除外。
   - 补码
@@ -368,6 +401,7 @@ class data
 ```
 执行结果:会报错,x+b变成了int型再赋值给byte型,会出现精度损失从而报错
 ![image.png](https://upload-images.jianshu.io/upload_images/14555448-d2d69220d328df88.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 - B:强制转换的格式(加上类型强制转换)
   - b = (byte)(a + b); 
 ```java
@@ -730,7 +764,7 @@ b = 3
 
   - int a = 10;
     	int b = 10;
-    	int c = 10;
+      	int c = 10;
 
     ```java
     a = b++;		
